--- a/bower.json
+++ b/bower.json
@@ -3,10 +3,12 @@
     "version": "0.0.0",
     "dependencies": {
         "angular": "~1.2.0",
+        "angular-ui-router": "latest",
         "json3": "~3.3.1",
         "es5-shim": "~3.1.0",
         "bootstrap": "~3.2.0",
-        "big.js": "~2.5.1"
+        "big.js": "~2.5.1",
+        "ionic": "1.0.0-beta.13"
     },
     "devDependencies": {
         "angular-mocks": "~1.2.0",
